discussion/kv_engine/182556/182556_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add ItemPagerFactory

Adds a factory class for the item pager tasks. We will extend this
factory to return a  cross-bucket item pager task for buckets with
that feature enabled.

Change-Id: Ib7e0dcba94ca35f7074205f389f7a4f08b278809

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-23 13:51:01.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-23 14:36:24.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42982/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5:
error: use of undeclared identifier "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42982/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21928/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51: error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
std::shared_ptr<NotifiableTask> ItemPagerFactory::getItemPager(
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::shared_ptr<NotifiableTask> getItemPager(KVBucket& store);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21928/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51:
error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21928/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25237/ : FAILURE

ThreadSanitizer issue: data race /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:173 in std::__uniq_ptr_impl<Collections::VB::Manifest, std::default_delete<Collections::VB::Manifest> >::_M_ptr() const  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25237/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23439/ : FAILURE

Failure of GoogleTest "ThrottleTest.OpsAreThrottled":

<pre>
[ RUN      ] ThrottleTest.OpsAreThrottled
[2022-11-23T14:25:22.400Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-23T14:25:22.400Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 0
[2022-11-23T14:25:22.400Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-23T14:25:22.400Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 0
[2022-11-23T14:25:22.400Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-23T14:25:22.400Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 0
[2022-11-23T14:25:22.400Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-23T14:25:22.400Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 0
[2022-11-23T14:25:22.400Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-23T14:25:22.400Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 0
[2022-11-23T14:25:22.400Z] [  FAILED  ] ThrottleTest.OpsAreThrottled (6275 ms)
ThrottleTest.OpsAreThrottled
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23439/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51211/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21340/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11744/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/685/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24387/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11654/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23973/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32391/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
